--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,4 +4,13 @@ version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "faiss-cpu>=1.7.4",
+    "huggingface-hub>=0.19.4",
+    "langchain>=0.0.335",
+    "langchain-community>=0.0.14",
+    "langchain-core>=0.1.13",
+    "sentence-transformers>=2.2.2",
+    "torch>=2.0.0",
+    "transformers>=4.35.0",
+]
