--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "langchain>=0.0.335",
     "langchain-community>=0.0.14",
     "langchain-core>=0.1.13",
+    "mcp>=1.2.0",
     "pytest>=8.3.5",
     "sentence-transformers>=2.2.2",
     "torch>=2.0.0",
